# pixi-browse

./: .copier-answers.yml  .gitignore  AGENTS.md  README.md  SECURITY.md  pixi.toml  pyproject.toml
.claude/skills/: py-rattler
.codex/skills/: textual
.github/assets/: demo-dark.tape  demo-light.tape  demo.tape
.github/workflows/: build.yml  ci.yml  scorecard.yml
pixi_browse/: __main__.py  downloads.py  models.py  platform_utils.py  rendering.py  repodata.py  search.py  selection_list.tcss  tui.py
pixi_browse/tui/: __init__.py  app.py  state.py  version_loader.py  widgets.py
tests/: test_cli.py  test_core.py  test_versions.py
